fix: media going out of view width

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ label{
 }
 
 img{
-    max-width: 100vw;
+    max-width: 90vw;
     margin: auto;
     margin-bottom: 1rem;
 }
